update: swagger , routes and reservationsController.spec.ts
